<resources>
    <string name="app_name">Schedule_io</string>
    <string name="menu">Menu</string>
    <string name="play_again">Play Again</string>
    <string name="le_word">Le Word</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="register_user">REGISTER USER</string>
</resources>